--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -1,3 +1,6 @@
+<!-- References:
+https://unbounce.com/landing-page-examples/best-landing-page-examples/ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
