--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -6,21 +6,314 @@ https://unbounce.com/landing-page-examples/best-landing-page-examples/ -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bakhsh Studios</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist" style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
-        <li class="nav-item" role="presentation">
-          <button class="nav-link active rounded-5" id="home-tab2" data-bs-toggle="tab" type="button" role="tab" aria-selected="true">Home</button>
-        </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link rounded-5" id="profile-tab2" data-bs-toggle="tab" type="button" role="tab" aria-selected="false">Profile</button>
-        </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab" aria-selected="false">Contact</button>
-        </li>
-      </ul>
+  <nav class="navbar navbar-bakcgourndclr">
+    <ul>
+      <li><a href="" class="navbar-typography text-underline">Home</a></li>
+      <li><a href="" class="navbar-typography">Contact us</a></li>
+      <li><a href="" class="navbar-typography">Projects</a></li>
+      <li><a href="" class="navbar-typography">Services</a></li>
+      <li><a href="" class="navbar-typography">About us</a></li>
+    </ul>
+  </nav>
+
+
+  <!-- <section class="hero">
+    <div class="container-fluid fluid-container-backgroundclr">
+      <div class="row landing-page-hero-padding">
+        <div class="col">
+          <p class="landing-page-text landing-page-text-title">BUILDING YOUR DREAMS INTO REALITY</p>
+          <p class="landing-page-text landing-page-text-details">Experienced Developers, Innovative Designs, Exceptional Quality</p>
+          <img src="resources/miniArrow.svg" alt="arrow"><br>
+          <img src="resources/MiniLineBreak.svg" alt="line" class="landing-page-arrows-alignment"><br>
+          <img src="resources/LargeLineBreak.png" alt="line">
+        </div>
+        <div class="col">
+          <img src="resources/IMG_1465.JPG" alt="BUILDING" class="landing-page-image landing-page-image-shaddow landing-page-image-margin">
+        </div>
+      </div>
+    </div>
+  </section> -->
+  
+  <!-- <section class="hero">
+      <div class="hero_content h-100 container-xxl position-relative">
+        <div class="col d-flex h-100 w-55 align-items-center">
+          <div class="">
+            <div class="text-white">
+              <p class="landing-page-text landing-page-text-title">BUILDING YOUR DREAMS INTO REALITY.</p>
+              <p class="landing-page-text landing-page-text-details">Experienced Developers, Innovative Designs, Exceptional Quality</p>
+              <img src="resources/miniArrow.svg" alt="arrow"><br>
+              <img src="resources/MiniLineBreak.svg" alt="line" class="landing-page-arrows-alignment"><br>
+              <img src="resources/LargeLineBreak.png" alt="line">
+            </div>
+        </div>
+        <div class="col w-45">
+          <img src="resources/IMG_1465.JPG" alt="BUILDING" class="landing-page-image landing-page-image-shaddow landing-page-image-margin">
+        </div>
+      </div>  
+  </section> -->
+
+  <section class="hero">
+    <div class="hero_content d-flex">
+      <div class="text-section">
+        <p class="landing-page-text landing-page-text-title">BUILDING YOUR DREAMS INTO REALITY.</p>
+        <p class="landing-page-text landing-page-text-details">Experienced Developers, Innovative Designs, Exceptional Quality</p>
+        <img src="resources/miniArrow.svg" alt="arrow"><br>
+        <div class="line-breaks-container">
+          <img src="resources/MiniLineBreak.svg" alt="line" class="landing-page-arrows-alignment">
+          <br>
+          <img src="resources/LargeLineBreak.png" alt="line">
+        </div>
+      </div>
+      <div class="image-section">
+        <img src="resources/IMG_1465.JPG" alt="BUILDING" class="landing-page-image">
+      </div>
+    </div>  
+  </section>
+
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="stats-padding">
+          <p class="stats-typography stats-typography-largetext">6+</p>
+          <p class="stats-typography stats-typography-minitext">Years of Experience</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="stats-padding">
+          <p class="stats-typography stats-typography-largetext">75+</p>
+          <p class="stats-typography stats-typography-minitext">Projects Delivered</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="stats-padding">
+          <p class="stats-typography stats-typography-largetext">355+</p>
+          <p class="stats-typography stats-typography-minitext">Satisfied Customers</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="container-fluid px-0">
+    <div class="row gx-0">
+      <div class="col"><img src="resources/IMG_1464.JPG" alt="" class="img-fluid"></div>
+      <div class="col"><img src="resources/IMG_1465.JPG" alt="" class="img-fluid"></div>
+      <div class="col"><img src="resources/IMG_1467.JPG" alt="" class="img-fluid"></div>
+      <div class="col"><img src="resources/IMG_1468.JPG" alt="" class="img-fluid"></div>
+      <div class="col"><img src="resources/IMG_1509.JPG" alt="" class="img-fluid"></div>
+      <!-- <div class="col"><img src="your-image-source.jpg" alt="" class="img-fluid"></div> -->
+    </div>
+  </div>  
+
+  <div class="container">
+    <div class="row justify-content-start mt-5 py-5">
+      <div class="col-md-4 heading-section ftco-animate">
+        <h2 class="mb-4 white-font">Our Services</h2>
+        <p class="white-font">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+      </div>
+      <div class="col-md-8 ftco-animate">
+        <div class="row d-flex">
+          <div class="col-md-6 d-flex align-items-stretch">
+            <div class="media block-6 services services-2 d-block media-body-background-colour p-4 mb-4">
+              <div class="icon d-flex justify-content-center align-items-center">
+                <span class="flaticon-layers"></span>
+              </div>
+              <div class="media-body p-2 mt-3">
+                <h3 class="heading white-font">Design</h3>
+                <p class="white-font">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 d-flex align-items-stretch">
+            <div class="media block-6 services services-2 d-block p-4 mb-4 media-body-background-colour">
+              <div class="icon d-flex justify-content-center align-items-center">
+                <span class="flaticon-layers"></span>
+              </div>
+              <div class="media-body p-2 mt-3">
+                <h3 class="heading white-font">Industrial Design</h3>
+                <p class="white-font">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 d-flex align-items-stretch">
+            <div class="media block-6 services services-2 d-block media-body-background-colour p-4 mb-4">
+              <div class="icon d-flex justify-content-center align-items-center">
+                <span class="flaticon-layers"></span>
+              </div>
+              <div class="media-body p-2 mt-3">
+                <h3 class="heading white-font">Architecture Support</h3>
+                <p class="white-font">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 d-flex align-items-stretch">
+            <div class="media block-6 services services-2 d-block media-body-background-colour p-4 mb-4">
+              <div class="icon d-flex justify-content-center align-items-center">
+                <span class="flaticon-layers"></span>
+              </div>
+              <div class="media-body p-2 mt-3">
+                <h3 class="heading white-font">Renovation</h3>
+                <p class="white-font">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid fluid-container-backgroundclr-green px-0">
+      <div class="row">
+        
+      </div>
+    </div>
+
+    <div class="container-fluid px-0 contact-form form-background-colour">
+      <form method="post">
+        <h3 class="white-font">Drop Us a Message</h3>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <input type="text" name="txtName" class="form-control" placeholder="Your Name *" value="" />
+            </div>
+            <div class="form-group">
+              <input type="text" name="txtEmail" class="form-control" placeholder="Your Email *" value="" />
+            </div>
+            <div class="form-group">
+              <input type="text" name="txtPhone" class="form-control" placeholder="Your Phone Number *" value="" />
+            </div>
+            <div class="form-group">
+              <input type="submit" name="btnSubmit" class="btnContact" value="Send Message" />
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <textarea name="txtMsg" class="form-control" placeholder="Your Message *" style="width: 100%; height: 150px;"></textarea>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+
+  <footer class="footer-10 white-font">
+    <div class="container">
+      <div class="row mb-5 pb-3 no-gutters">
+        <div class="col-md-4 mb-md-0 mb-4 d-flex animated-background-cards">
+          <div class="con con-1 w-100 py-5">
+            <div class="con-info w-100 text-center contact-card-alignmnet">
+              <div class="icon d-flex align-items-center justify-content-center">
+                <span class="ion-ios-call"></span>
+              </div>
+              <a href="wame.pro/1h8226">
+                <div class="icon-circle">
+                  <img class="image-within-icon" src="resources/app.png" alt="WhatsApp">
+                </div>
+              </a>
+              <div class="text">
+                <a href="wame.pro/1h8226"><span class="white-font">(+966) 53 611 3054</span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-md-0 mb-4 d-flex animated-background-cards">
+          <div class="con con-2 w-100 py-5">
+            <div class="con-info w-100 text-center contact-card-alignmnet">
+              <div class="icon d-flex align-items-center justify-content-center">
+                <span class="ion-ios-mail"></span>
+              </div>
+              <a href="mailto:atif.bakhsh1422@gmail.com?subject=Heluu&body=This%20is%20a%20test%20email%20link">
+                <div class="icon-circle">
+                <img class="image-within-icon" src="resources/mail.png" alt="mail">
+                </div>
+              </a>
+              <div class="text">
+                <a href="mailto:atif.bakhsh1422@gmail.com?subject=Heluu&body=This%20is%20a%20test%20email%20link"><span class="white-font">atif.bakhsh1422@gmail.com</span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-md-0 mb-4 d-flex animated-background-cards">
+          <div class="con con-3 w-100 py-5">
+            <div class="con-info w-100 text-center contact-card-alignmnet">
+              <div class="icon d-flex align-items-center justify-content-center">
+                <span class="ion-ios-pin"></span>
+              </div>
+              <a href="https://www.google.com/maps/place/KAFD,+Al+Aqiq,+Riyadh+Saudi+Arabia/data=!4m2!3m1!1s0x3e2ee2fb056ead47:0x828d40023cc0ff61?sa=X&ved=1t:242&ictx=111">
+                <div class="icon-circle">
+                  <img class="image-within-icon" src="resources/location.png" alt="location">
+                </div>
+              </a>
+              <div class="text">
+                <a href="https://www.google.com/maps/place/KAFD,+Al+Aqiq,+Riyadh+Saudi+Arabia/data=!4m2!3m1!1s0x3e2ee2fb056ead47:0x828d40023cc0ff61?sa=X&ved=1t:242&ictx=111"><span class="white-font">KAFD, Riyadh, Saudi Arabia.</span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="row" style="border: 1px solid red;">
+        <div class="col-md-7">
+          <div class="row">
+            <div class="col-md-4 mb-md-0 mb-4">
+              <h2 class="footer-heading">About</h2>
+              <ul class="list-unstyled">
+                <li><a href="#" class="d-block link-decoration white-font">Out story</a></li>
+                <li><a href="#" class="d-block link-decoration white-font">Awards</a></li>
+                <li><a href="#" class="d-block link-decoration white-font">Our Team</a></li>
+                <li><a href="#" class="d-block link-decoration white-font">Career</a></li>
+              </ul>
+            </div>
+            <div class="col-md-4 mb-md-0 mb-4">
+              <h2 class="footer-heading">Company</h2>
+              <ul class="list-unstyled">
+                <li><a href="#" class="d-block link-decoration white-font">Our services</a></li>
+                <li><a href="#" class="d-block link-decoration white-font">Clients</a></li>
+                <li><a href="#" class="d-block link-decoration white-font">Contact</a></li>
+                <li><a href="#" class="d-block link-decoration white-font">Press</a></li>
+              </ul>
+            </div>
+            <div class="col-md-4 mb-md-0 mb-4">
+              <h2 class="footer-heading">Resources</h2>
+              <ul class="list-unstyled">
+                <li><a href="#" class="d-block link-decoration white-font">Blog</a></li>
+                <li><a href="#" class="d-block link-decoration white-font">Newsletter</a></li>
+                <li><a href="#" class="d-block link-decoration white-font">Privacy Policy</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5 mb-md-0 mb-4">
+          <h2 class="footer-heading">Subscribe</h2>
+          <form action="#" class="subscribe-form">
+            <div class="form-group d-flex">
+              <input type="text" class="form-control rounded-left" placeholder="Enter email address">
+              <button type="submit" class="form-control submit rounded-right">Subscribe</button>
+            </div>
+            <span class="subheading">Get digital marketing updates in your mailbox</span>
+          </form>
+        </div>
+      </div> -->
+      <div class="row mt-5 pt-4 border-top">
+        <div class="col-md-6 col-lg-8 mb-md-0 mb-4">
+          <p class="text-center mb-4">Copyright © 2024 BAKHSH STUDIOS. All rights reserved.</p>
+        </div>
+        <!-- <div class="col-md-6 col-lg-4 text-md-right">
+          <ul class="ftco-footer-social p-0">
+            <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="ion-logo-twitter">Twitter</span></a></li>
+            <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="ion-logo-facebook">Face</span></a></li>
+            <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="ion-logo-instagram">Insta</span></a></li>
+          </ul>
+        </div> -->
+      </div>
+    </div>
+  </footer>
+  
+  <script src="script.js"></script>
 </body>
 </html>
