--- a/labtask 2/index.html
+++ b/labtask 2/index.html
@@ -1,21 +1,114 @@
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Story Management App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+
+<div class="container mt-5">
+    <h1>Story Management</h1>
+
+    <form id="storyForm" class="mb-4">
+        <div class="mb-3">
+            <label for="storyTitle" class="form-label">Title:</label>
+            <input type="text" class="form-control" id="storyTitle" required>
+        </div>
+        <div class="mb-3">
+            <label for="storyContent" class="form-label">Content:</label>
+            <textarea class="form-control" id="storyContent" rows="4" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary" id="submitButton">Submit</button>
+        <button type="button" class="btn btn-secondary" id="cancelButton" style="display: none;">Cancel</button>
+    </form>
+
+    <div id="storyContainer"></div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="script.js"></script>
+
+</body>
+</html> -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Boring Stories</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<!-- <body class="bg-dark text-white"> -->
 
+<div class="container py-5 text-white">
+    <div class="row">
+        <div class="col-12 col-lg-6 mb-4">
+            <h1 class="display-1 fw-bold">Boring Stories.</h1>
+            <p class="lead">from us and everywhere</p>
+            <ul class="list-unstyled">
+                <li>Tell a story.</li>
+                <li>Add a story.</li>
+                <li>Write a story.</li>
+            </ul>
+            <p>This is a blog of multiple stories that have different topics and gives us value after reading them. It teaches us life lessons and how to be better.</p>
+        </div>
+        <div class="col-12 col-lg-6 mb-4">
+            <!-- <div class="card bg-secondary text-dark"> -->
+                <!-- <div class="card-body">
+                    <form id="storyForm">
+                        <div class="mb-3">
+                            <label for="storyTitle" class="form-label">New Story</label>
+                            <input type="text" class="form-control" id="storyTitle" placeholder="Title">
+                        </div>
+                        <div class="mb-3">
+                            <textarea class="form-control" id="storyContent" rows="4" placeholder="The Story..."></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-light">Add</button>
+                    </form>
+                </div> -->
+            <!-- </div> -->
+        </div>
+    </div>
+</div>
     
+<div class="container py-5 text-white">
+    <div class="row">
+        <div class="col-12 col-lg-6 mb-4">
+            <div class="card bg-secondary text-dark">
+                <div class="card-body">
+                    <form id="storyForm">
+                        <div class="mb-3">
+                            <label for="storyTitle" class="form-label">New Story</label>
+                            <input type="text" class="form-control" id="storyTitle" placeholder="Title">
+                        </div>
+                        <div class="mb-3">
+                            <textarea class="form-control" id="storyContent" rows="4" placeholder="The Story..."></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-light">Add</button>
+                    </form>
+                    <h2 class="display-2">Stories Bank.</h2>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-lg-6 mb-4">
+            <div id="storyContainer">
+            </div>
+        </div>
+    </div>
+</div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="./jqcrud.js"></script>
-    <script src="script.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="script.js"></script>
+
 </body>
 </html>
