--- a/labtask 2/index.html
+++ b/labtask 2/index.html
@@ -48,46 +48,33 @@
 </head>
 <!-- <body class="bg-dark text-white"> -->
 
-<div class="container py-5 text-white">
+<div class="container py-5 text-white hero">
     <div class="row">
-        <div class="col-12 col-lg-6 mb-4">
-            <h1 class="display-1 fw-bold">Boring Stories.</h1>
-            <p class="lead">from us and everywhere</p>
-            <ul class="list-unstyled">
+        <div class="col-12 col-lg-8 mb-4">
+            <h1 class="title-heading title-subheadingalignment">Boring Stories.</h1>
+            <p class="title-subheading title-subheadingalignment">from us and everywhere</p>
+            <ul class="title-miniheading title-miniheadingalignment">
                 <li>Tell a story.</li>
                 <li>Add a story.</li>
                 <li>Write a story.</li>
             </ul>
-            <p>This is a blog of multiple stories that have different topics and gives us value after reading them. It teaches us life lessons and how to be better.</p>
+            
         </div>
-        <div class="col-12 col-lg-6 mb-4">
-            <!-- <div class="card bg-secondary text-dark"> -->
-                <!-- <div class="card-body">
-                    <form id="storyForm">
-                        <div class="mb-3">
-                            <label for="storyTitle" class="form-label">New Story</label>
-                            <input type="text" class="form-control" id="storyTitle" placeholder="Title">
-                        </div>
-                        <div class="mb-3">
-                            <textarea class="form-control" id="storyContent" rows="4" placeholder="The Story..."></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-light">Add</button>
-                    </form>
-                </div> -->
-            <!-- </div> -->
+        <div class="col-12 col-lg-4 mb-4 d-flex align-items-end">
+            <p class="briefintro ">This is a blog of multiple stories that have different topics and gives us value after reading them. It teaches us life lessons and how to be better.</p>
         </div>
     </div>
 </div>
     
-<div class="container py-5 text-white">
+<div class="fluid-container py-5 text-white">
     <div class="row">
-        <div class="col-12 col-lg-6 mb-4">
-            <div class="card bg-secondary text-dark">
+        <div class="col-12 col-lg-6 mb-4 leftside">
+            <div class="card text-dark">
                 <div class="card-body">
                     <form id="storyForm">
                         <div class="mb-3">
                             <label for="storyTitle" class="form-label">New Story</label>
-                            <input type="text" class="form-control" id="storyTitle" placeholder="Title">
+                            <input type="text" class="form-control formtypography" id="storyTitle" placeholder="Title">
                         </div>
                         <div class="mb-3">
                             <textarea class="form-control" id="storyContent" rows="4" placeholder="The Story..."></textarea>
