--- a/labtask 2/index.html
+++ b/labtask 2/index.html
@@ -1,41 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Story Management App</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-
-<div class="container mt-5">
-    <h1>Story Management</h1>
-
-    <form id="storyForm" class="mb-4">
-        <div class="mb-3">
-            <label for="storyTitle" class="form-label">Title:</label>
-            <input type="text" class="form-control" id="storyTitle" required>
-        </div>
-        <div class="mb-3">
-            <label for="storyContent" class="form-label">Content:</label>
-            <textarea class="form-control" id="storyContent" rows="4" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary" id="submitButton">Submit</button>
-        <button type="button" class="btn btn-secondary" id="cancelButton" style="display: none;">Cancel</button>
-    </form>
-
-    <div id="storyContainer"></div>
-</div>
-
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="script.js"></script>
-
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -46,52 +8,33 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<!-- <body class="bg-dark text-white"> -->
+<body>
 
-<div class="container py-5 text-white hero">
-    <div class="row">
-        <div class="col-12 col-lg-8 mb-4">
-            <h1 class="title-heading title-subheadingalignment">Boring Stories.</h1>
-            <p class="title-subheading title-subheadingalignment">from us and everywhere</p>
-            <ul class="title-miniheading title-miniheadingalignment">
-                <li>Tell a story.</li>
-                <li>Add a story.</li>
-                <li>Write a story.</li>
-            </ul>
-            
-        </div>
-        <div class="col-12 col-lg-4 mb-4 d-flex align-items-end">
-            <p class="briefintro ">This is a blog of multiple stories that have different topics and gives us value after reading them. It teaches us life lessons and how to be better.</p>
-        </div>
-    </div>
-</div>
-    
-<div class="fluid-container py-5 text-white">
-    <div class="row">
-        <div class="col-12 col-lg-6 mb-4 leftside">
+<div class="fluid-container no-padding">
+    <div class="row h-100">
+        <div class="col-lg-5 leftside d-flex flex-column justify-content-center hero-section">
             <div class="card text-dark">
                 <div class="card-body">
                     <form id="storyForm">
                         <div class="mb-3">
-                            <label for="storyTitle" class="form-label">New Story</label>
-                            <input type="text" class="form-control formtypography" id="storyTitle" placeholder="Title">
+                            <label for="storyTitle" class="form-label heading-text">New Story</label>
+                            <input type="text" class="form-control formtypography form-text-field" id="storyTitle" placeholder="Title">
                         </div>
                         <div class="mb-3">
-                            <textarea class="form-control" id="storyContent" rows="4" placeholder="The Story..."></textarea>
+                            <textarea class="form-control formtypography form-text-field" id="storyContent" rows="4" placeholder="The Story..."></textarea>
                         </div>
-                        <button type="submit" class="btn btn-light">Add</button>
+                        <button type="submit" class="btn btn-light formtypography add-button">Add</button>
                     </form>
-                    <h2 class="display-2">Stories Bank.</h2>
+                    <h2 class="display-2 bottom-heading">Stories Bank.</h2>
                 </div>
             </div>
         </div>
-        <div class="col-12 col-lg-6 mb-4">
+        <div class="col-lg-7 rightside overflow text-white">
             <div id="storyContainer">
             </div>
         </div>
     </div>
 </div>
-
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
